--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                                     <div class="hosting-thumbnail-text">
                                         <span class="bold">Auberge de la Cannebière</span>
                                         <div class="thin">Nuit à partir de 25€</div>
-                                        <span style="color: #0065FC;"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i></span>
+                                        <span style="color: #0065FC;"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fa fa-star"></i><i class="far fa-star"></i></span>
                                     </div>
                                 </div>
                             </a>
@@ -73,7 +73,7 @@
                                     <div class="hosting-thumbnail-text">
                                         <span class="bold">Hôtel du port</span>
                                         <div class="thin">Nuit à partir de 52€</div>
-                                        <span style="color: #0065FC;"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i></span>
+                                        <span style="color: #0065FC;"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></span>
                                     </div>
                                 </div>
                             </a>
@@ -99,7 +99,7 @@
                                     <div class="hosting-thumbnail-text">
                                         <span class="bold">Hôtel de la mer</span>
                                         <div class="thin"> Nuit à partir de 46€</div>
-                                        <span style="color: #0065FC;"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i></span>
+                                        <span style="color: #0065FC;"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i><i class="far fa-star"></i></span>
                                     </div>
                                 </div>                               
                             </a>
@@ -123,7 +123,7 @@
                                     <div class="hosting-thumbnail-text">
                                         <span class="bold">Hôtel chez Amina</span>
                                         <div class="thin">Nuit à partir de 96€</div>
-                                        <span style="color: #0065FC;"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i></span>
+                                        <span style="color: #0065FC;"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></span>
                                     </div>                                       
                                 </div>                                             
                             </a>
@@ -148,7 +148,7 @@
                             <div class="popular-thumbnail-text">
                                 <span class="bold">Hôtel Le soleil du matin</span>
                                 <div class="thin">Nuit à partir de 128€</div>
-                                <span style="color: #0065FC;"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i></span>
+                                <span style="color: #0065FC;"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></span>
                             </div>
                         </div>
                         <div class="popular-thumbnail df">
