--- a/index.html
+++ b/index.html
@@ -50,95 +50,97 @@
                 </p>
             </div>
             <br/>
-            <div id="body-hosting" class="df jc-sb">
+            <div id="body-hosting" class="df">
                 <section id="body-hosting-marseille" class="df fd-c bloc body-hosting">
-                    <span class="bold" >Hébergements à Marseille<br/>
-                    <div class="df">
-                        <div>
-                            <a target="_blank" href="Ressources/hebergements/cannebiere.jpg">
-                                <div class="hosting-thumbnail df fd-c">   
-                                    <img class="hosting-thumbnail-photo" src="./Ressources/hebergements/cannebiere.jpg" alt="photo de la chambre 1" title="Cliquez pour agrandir l'image" />   
-                                    <div class="hosting-thumbnail-text">
-                                        <span class="bold">Auberge de la Cannebière</span>
-                                        <div class="thin">Nuit à partir de 25€</div>
-                                        <span style="color: #0065FC;"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fa fa-star"></i><i class="far fa-star"></i></span>
+                    <div class="bold" >Hébergements à Marseille<br/></div>
+                    <div>
+                        <div class="df">
+                            <div>
+                                <a target="_blank" href="Ressources/hebergements/cannebiere.jpg">
+                                    <div class="hosting-thumbnail df fd-c">   
+                                        <img class="hosting-thumbnail-photo" src="./Ressources/hebergements/cannebiere.jpg" alt="photo de la chambre 1" title="Cliquez pour agrandir l'image" />   
+                                        <div class="hosting-thumbnail-text">
+                                            <span class="bold">Auberge de la Cannebière</span>
+                                            <div class="thin">Nuit à partir de 25€</div>
+                                            <span style="color: #0065FC;"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fa fa-star"></i><i class="far fa-star"></i></span>
+                                        </div>
                                     </div>
-                                </div>
-                            </a>
-                        </div>
-                        <div>
-                            <a target="_blank" href="Ressources/hebergements/port.jpg">
-                                <div class="hosting-thumbnail df fd-c">
-                                    <img class="hosting-thumbnail-photo" src="./Ressources/hebergements/port.jpg" alt="photo de la chambre 2" title="Cliquez pour agrandir l'image" />
-                                    <div class="hosting-thumbnail-text">
-                                        <span class="bold">Hôtel du port</span>
-                                        <div class="thin">Nuit à partir de 52€</div>
-                                        <span style="color: #0065FC;"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></span>
+                                </a>
+                            </div>
+                            <div>
+                                <a target="_blank" href="Ressources/hebergements/port.jpg">
+                                    <div class="hosting-thumbnail df fd-c">
+                                        <img class="hosting-thumbnail-photo" src="./Ressources/hebergements/port.jpg" alt="photo de la chambre 2" title="Cliquez pour agrandir l'image" />
+                                        <div class="hosting-thumbnail-text">
+                                            <span class="bold">Hôtel du port</span>
+                                            <div class="thin">Nuit à partir de 52€</div>
+                                            <span style="color: #0065FC;"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></span>
+                                        </div>
                                     </div>
-                                </div>
-                            </a>
-                        </div>
-                        <div>
-                            <a target="_blank" href="Ressources/hebergements/mouettes.jpg">
-                                <div class="hosting-thumbnail df fd-c">
-                                    <img class="hosting-thumbnail-photo" src="./Ressources/hebergements/mouettes.jpg" alt="photo de la chambre 3" title="Cliquez pour agrandir l'image" />                                    
-                                    <div class="hosting-thumbnail-text">
-                                        <span class="bold">Hôtel Les mouettes</span>
-                                        <div class="thin">Nuit à partir de 76€</div>
-                                        <span style="color: #0065FC;"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i></span>
+                                </a>
+                            </div>
+                            <div>
+                                <a target="_blank" href="Ressources/hebergements/mouettes.jpg">
+                                    <div class="hosting-thumbnail df fd-c">
+                                        <img class="hosting-thumbnail-photo" src="./Ressources/hebergements/mouettes.jpg" alt="photo de la chambre 3" title="Cliquez pour agrandir l'image" />                                    
+                                        <div class="hosting-thumbnail-text">
+                                            <span class="bold">Hôtel Les mouettes</span>
+                                            <div class="thin">Nuit à partir de 76€</div>
+                                            <span style="color: #0065FC;"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i></span>
+                                        </div>
                                     </div>
-                                </div>
-                            </a>
+                                </a>
+                            </div>
                         </div>
-                    </div>
-                    <div class="df">
-                        <div class="df fd-c">
-                            <a target="_blank" href="Ressources/hebergements/mer.jpg">
-                                <div class="hosting-thumbnail df fd-c">
-                                    <img class="hosting-thumbnail-photo" src="./Ressources/hebergements/mer.jpg" alt="photo de la chambre 4" title="Cliquez pour agrandir l'image" />
-                                    <div class="hosting-thumbnail-text">
-                                        <span class="bold">Hôtel de la mer</span>
-                                        <div class="thin"> Nuit à partir de 46€</div>
-                                        <span style="color: #0065FC;"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i><i class="far fa-star"></i></span>
+                        <div class="df">
+                            <div class="df fd-c">
+                                <a target="_blank" href="Ressources/hebergements/mer.jpg">
+                                    <div class="hosting-thumbnail df fd-c">
+                                        <img class="hosting-thumbnail-photo" src="./Ressources/hebergements/mer.jpg" alt="photo de la chambre 4" title="Cliquez pour agrandir l'image" />
+                                        <div class="hosting-thumbnail-text">
+                                            <span class="bold">Hôtel de la mer</span>
+                                            <div class="thin"> Nuit à partir de 46€</div>
+                                            <span style="color: #0065FC;"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i><i class="far fa-star"></i></span>
+                                        </div>
+                                    </div>                               
+                                </a>
+                            </div>
+                            <div class="df fd-c">
+                                <a target="_blank" href="Ressources/hebergements/panier.jpg">
+                                    <div class="hosting-thumbnail df fd-c">
+                                        <img class="hosting-thumbnail-photo" src="./Ressources/hebergements/panier.jpg" alt="photo de la chambre 5" title="Cliquez pour agrandir l'image" />
+                                        <div class="hosting-thumbnail-text">
+                                            <span class="bold">Auberge Le Panier</span>
+                                            <div class="thin"> Nuit à partir de 23€</div>
+                                            <span style="color: #0065FC;"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i></span>
+                                        </div>
                                     </div>
-                                </div>                               
-                            </a>
-                        </div>
-                        <div class="df fd-c">
-                            <a target="_blank" href="Ressources/hebergements/panier.jpg">
-                                <div class="hosting-thumbnail df fd-c">
-                                    <img class="hosting-thumbnail-photo" src="./Ressources/hebergements/panier.jpg" alt="photo de la chambre 5" title="Cliquez pour agrandir l'image" />
-                                    <div class="hosting-thumbnail-text">
-                                        <span class="bold">Auberge Le Panier</span>
-                                        <div class="thin"> Nuit à partir de 23€</div>
-                                        <span style="color: #0065FC;"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i></span>
-                                    </div>
-                                </div>
-                            </a>
-                        </div>
-                        <div class="df fd-c">
-                            <a target="_blank" href="Ressources/hebergements/amina.jpg">
-                                <div class="hosting-thumbnail df fd-c">
-                                    <img class="hosting-thumbnail-photo" src="./Ressources/hebergements/amina.jpg" alt="photo de la chambre 6" title="Cliquez pour agrandir l'image" />          
-                                    <div class="hosting-thumbnail-text">
-                                        <span class="bold">Hôtel chez Amina</span>
-                                        <div class="thin">Nuit à partir de 96€</div>
-                                        <span style="color: #0065FC;"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></span>
-                                    </div>                                       
-                                </div>                                             
-                            </a>
-                        </div>
-                    </div> 
-                    <p>
-                        <span class="bold show-more">Afficher Plus</span>
-                    </p>
+                                </a>
+                            </div>
+                            <div class="df fd-c">
+                                <a target="_blank" href="Ressources/hebergements/amina.jpg">
+                                    <div class="hosting-thumbnail df fd-c">
+                                        <img class="hosting-thumbnail-photo" src="./Ressources/hebergements/amina.jpg" alt="photo de la chambre 6" title="Cliquez pour agrandir l'image" />          
+                                        <div class="hosting-thumbnail-text">
+                                            <span class="bold">Hôtel chez Amina</span>
+                                            <div class="thin">Nuit à partir de 96€</div>
+                                            <span style="color: #0065FC;"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></span>
+                                        </div>                                       
+                                    </div>                                             
+                                </a>
+                            </div>
+                        </div> 
+                        <p>
+                            <span class="bold show-more">Afficher Plus</span>
+                        </p>
+                    </div>    
                 </section>
                 <section id="body-hosting-popular" class="bloc df fd-c body-hosting">
                     <div class="df jc-sb">
                         <span class="bold">Les plus populaires</span>
                         <span><i class="fas fa-chart-line"></i></span>
                     </div>
-                    <div>
+                    <div id="body-hosting-popular-results">
                         <div class="popular-thumbnail df">
                             <div>
                                 <a target="_blank" href="Ressources/hebergements/soleil-matin.jpg">
