--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
             </nav>
         </div>
         <div id="body">
+
+
+
+
             <div>
                 <p>
                     <span class="bold">Trouver votre hébergement pour des vacances de rêve</span><br/>
@@ -30,14 +34,23 @@
                     <input type="search" name="search" id="search" value="Marseille, France" />
                     <div id="body-search-btn">Rechercher</div id="body-search-btn"><br/>
                     </div> 
+
+
+
+
+
+
                 <div class="df">
-                    <span class="bold">Filtres</span>
-                    <div class="filter" >
-                        <span style="color: #0065FC;"><i class="fas fa-money-bill-wave"></i></span><span class="bold">Economique</span>
-                    </div> 
-                    <div class="filter" >
-                        <span style="color: #0065FC;"><i class="fas fa-child"></i></span><span class="bold">Familial</span>
-                    </div> 
+                    <span class="bold as-c">Filtres</span>
+                    <div class="df">
+                        <div class="filter" >
+                            <span class="filter-logo" style="color: #0065FC;"><i class="fas fa-money-bill-wave"></i></span><span class="bold">Economique</span>
+                        </div> 
+                        <div class="filter" >
+                            <span style="color: #0065FC;"><i class="fas fa-child"></i></span><span class="bold">Familial</span>
+                        </div> 
+                    </div>
+                   
                     <div class="filter" >
                         <span style="color: #0065FC;"><i class="fas fa-heart"></i></span><span class="bold">Romantique</span>
                     </div> 
@@ -45,6 +58,13 @@
                         <span style="color: #0065FC;"><i class="fas fa-dog"></i></span><span class="bold">Animaux autorisés</span>
                     </div> 
                 </div> 
+
+
+
+
+
+
+
                 <p>
                     <span style="color: #0065FC;"><i class="fas fa-info-circle"></i></i></span>Plus de 500 logements sont disponbiles dans cette ville
                 </p>
