--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     En plein centre ville ou en pleine nature<br/>
                 </p>
                 <div class="df">
-                    <span><i class="fas fa-map-marker-alt"></i></span>
+                    <div class="df"><div id="logo-gps"><span><i id="logo-gps-pos" class="fas fa-map-marker-alt"></i></span></div></div>
                     <input type="search" name="search" id="search" value="Marseille, France" />
                     <div id="body-search-btn">Rechercher</div id="body-search-btn"><br/>
                     </div> 
