margin and padding of hosting and popualr done

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </div>
         <div id="body">
 
-            <div>
+            <div id="first-bloc">
                 <p>
                     <span class="bold">Trouver votre hébergement pour des vacances de rêve</span><br/>
                     En plein centre ville ou en pleine nature<br/>
