shadow better than border

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container">
         <div id="header" class="df">
-            <img src="Ressources/logo/Reservia.svg" alt="logo reservia" />
+            <div id="logo-reservia" ><img src="Ressources/logo/Reservia.svg" alt="logo reservia" /></div>
             <nav id="menu" class="df jc-sa">
                 <a href="#body-hosting">Hégergements</a>
                 <a href="#body-activity">Activités</a>
@@ -65,7 +65,7 @@
 
 
                 <p>
-                    <span style="color: #0065FC;"><i class="fas fa-info-circle"></i></i></span>Plus de 500 logements sont disponbiles dans cette ville
+                    <span style="color: #0065FC; margin-right: 1em;"><i class="fas fa-info-circle"></i></span>Plus de 500 logements sont disponbiles dans cette ville
                 </p>
             </div>
             <br/>
