--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
                 </div>
             </div>
         </div>
-        <div id="footer" class="bloc df jc-sb">
+        <div id="footer" class="bloc">
             <div>
                 <span class="bold">A propos</span>
                 <ul>
