--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 
     <div class="container">
 
-
-
         <div id="header" class="df">
-            <img src="Ressources/logo/Reservia.svg" alt="logo reservia" />
+            <div>
+                <img src="Ressources/logo/Reservia.svg" alt="logo reservia" />
+            </div>
             <nav id="menu" class="df jc-sa">
                 <a href="#body-hosting">Hégergements</a>
                 <a href="#body-activity">Activités</a>
@@ -25,10 +25,7 @@
         </div>
 
 
-
-
         <div id="body">
-
             <div id="first-bloc">
                 <p>
                     <span class="bold">Trouver votre hébergement pour des vacances de rêve</span><br/>
@@ -62,13 +59,13 @@
                             <span style="color: #0065FC;"><i class="fas fa-heart"></i></span>
                         </div>
                         <span class="bold">Romantique</span>
-                    </div>
+                </div>
                     
                     
                     <div class="filter df" >
                             <span class="filter-logo-circle" style="color: #0065FC;"><i class="fas fa-dog"></i></span>
                         <span class="bold">Animaux autorisés</span>
-                    </div> 
+                        </div> 
                 </div> 
 
 
@@ -80,7 +77,7 @@
                 <section id="body-hosting-marseille" class="bloc df fd-c body-hosting">
                     <h2>Hébergements à Marseille</h2>
                     <div>
-                        <div class="df">
+                        <div id="body-hosting-marseille-one" class="df">
                             <div>
                                 <a target="_blank" href="Ressources/hebergements/cannebiere.jpg">
                                     <div class="hosting-thumbnail df fd-c">   
@@ -118,7 +115,7 @@
                                 </a>
                             </div>
                         </div>
-                        <div class="df">
+                        <div id="body-hosting-marseille-two" class="df">
                             <div class="df fd-c">
                                 <a target="_blank" href="Ressources/hebergements/mer.jpg">
                                     <div class="hosting-thumbnail df fd-c">
