responsiv desktop + pad done

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" media="screen and (min-width: 1024px)" href="./css/stlye-desktop.css">
     <link rel="stylesheet" media="screen and (min-width: 420px) and (max-width: 1399px)" href="./css/style-pad.css" /> 
-    <link rel="stylesheet" media="screen and (max-width: 420px)" href="./css/style-phone.css" /> 
+    <link rel="stylesheet" media="screen and (max-width: 705px)" href="./css/style-phone.css" /> 
     <title>Reservia</title>
 </head>
 <body>
@@ -164,7 +164,7 @@
                         <span><i class="fas fa-chart-line"></i></span>
                     </div>
                     <div id="body-hosting-popular-results">
-                        <div>
+                        <div class="body-hosting-popular-results-bloc">
                             <a target="_blank" href="Ressources/hebergements/soleil-matin.jpg">
                                 <div class="popular-thumbnail df">
                                     <div><img class="popular-thumbnail-photo" src="./Ressources/hebergements/soleil-matin.jpg" alt="photo de la chambre 1" title="Cliquez pour agrandir l'image" /></div>
@@ -176,7 +176,7 @@
                                 </div>
                             </a>
                         </div>
-                        <div>
+                        <div class="body-hosting-popular-results-bloc">
                             <a target="_blank" href="Ressources/hebergements/coeur-eau.jpg">
                                 <div class="popular-thumbnail df">
                                     <div><img class="popular-thumbnail-photo" src="./Ressources/hebergements/coeur-eau.jpg" alt="photo de la chambre 2" title="Cliquez pour agrandir l'image" /></div>     
@@ -188,7 +188,7 @@
                                 </div>
                             </a>
                         </div>
-                        <div>
+                        <div class="body-hosting-popular-results-bloc">
                             <a target="_blank" href="Ressources/hebergements/bleu-blanc.jpg">
                                 <div class="popular-thumbnail df">
                                     <div><img class="popular-thumbnail-photo" src="./Ressources/hebergements/bleu-blanc.jpg" alt="photo de la chambre 3" title="Cliquez pour agrandir l'image" /></div>         
