--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
                     <div id="body-search-btn">Rechercher</div>
                     </div> 
 
-                <div class="df">
-                    <span class="bold as-c">Filtres</span>
+                <div id="filtres" class="df">
+                    <span id="filtres-title" class="bold as-c">Filtres</span>
                     <div class="df">
                         <div class="filter df" >
                             <div class="filter-logo-circle">
@@ -59,14 +59,14 @@
                             <span style="color: #0065FC;"><i class="fas fa-heart"></i></span>
                         </div>
                         <span class="bold">Romantique</span>
-                </div>
+                    </div>
                     
                     
                     <div class="filter df" >
                             <span class="filter-logo-circle" style="color: #0065FC;"><i class="fas fa-dog"></i></span>
                         <span class="bold">Animaux autorisés</span>
                         </div> 
-                </div> 
+                    </div> 
 
 
                 <p>
@@ -82,10 +82,10 @@
                                 <a target="_blank" href="Ressources/hebergements/cannebiere.jpg">
                                     <div class="hosting-thumbnail df fd-c">   
                                         <img class="hosting-thumbnail-photo" src="./Ressources/hebergements/cannebiere.jpg" alt="photo de la chambre 1" title="Cliquez pour agrandir l'image" />   
-                                        <div class="hosting-thumbnail-text">
-                                            <span class="bold">Auberge de la Cannebière</span>
-                                            <div class="thin">Nuit à partir de 25€</div>
-                                            <span style="color: #0065FC;"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fa fa-star"></i><i class="far fa-star"></i></span>
+                                        <div class="hosting-thumbnail-text df fd-c jc-sb">
+                                            <div class="hosting-thumbnail-details bold">Auberge de la Cannebière</div>
+                                            <div class="hosting-thumbnail-details thin fs-small">Nuit à partir de 25€</div>
+                                            <div class="hosting-thumbnail-details" style="color: #0065FC;"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fa fa-star"></i><i class="far fa-star"></i></div>
                                         </div>
                                     </div>
                                 </a>
@@ -95,9 +95,9 @@
                                     <div class="hosting-thumbnail df fd-c">
                                         <img class="hosting-thumbnail-photo" src="./Ressources/hebergements/port.jpg" alt="photo de la chambre 2" title="Cliquez pour agrandir l'image" />
                                         <div class="hosting-thumbnail-text">
-                                            <span class="bold">Hôtel du port</span>
-                                            <div class="thin">Nuit à partir de 52€</div>
-                                            <span style="color: #0065FC;"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></span>
+                                            <div class="hosting-thumbnail-details bold">Hôtel du port</div>
+                                            <div class="hosting-thumbnail-details thin fs-small">Nuit à partir de 52€</div>
+                                            <div class="hosting-thumbnail-details" style="color: #0065FC;"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></div>
                                         </div>
                                     </div>
                                 </a>
@@ -107,9 +107,9 @@
                                     <div class="hosting-thumbnail df fd-c">
                                         <img class="hosting-thumbnail-photo" src="./Ressources/hebergements/mouettes.jpg" alt="photo de la chambre 3" title="Cliquez pour agrandir l'image" />                                    
                                         <div class="hosting-thumbnail-text">
-                                            <span class="bold">Hôtel Les mouettes</span>
-                                            <div class="thin">Nuit à partir de 76€</div>
-                                            <span style="color: #0065FC;"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i></span>
+                                            <div class="hosting-thumbnail-details bold">Hôtel Les mouettes</div>
+                                            <div class="hosting-thumbnail-detailsthin fs-small">Nuit à partir de 76€</div>
+                                            <div class="hosting-thumbnail-details" style="color: #0065FC;"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i></div>
                                         </div>
                                     </div>
                                 </a>
@@ -121,9 +121,9 @@
                                     <div class="hosting-thumbnail df fd-c">
                                         <img class="hosting-thumbnail-photo" src="./Ressources/hebergements/mer.jpg" alt="photo de la chambre 4" title="Cliquez pour agrandir l'image" />
                                         <div class="hosting-thumbnail-text">
-                                            <span class="bold">Hôtel de la mer</span>
-                                            <div class="thin"> Nuit à partir de 46€</div>
-                                            <span style="color: #0065FC;"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i><i class="far fa-star"></i></span>
+                                            <div class="hosting-thumbnail-details bold">Hôtel de la mer</div>
+                                            <div class="hosting-thumbnail-details thin fs-small"> Nuit à partir de 46€</div>
+                                            <div class="hosting-thumbnail-details" style="color: #0065FC;"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i><i class="far fa-star"></i></div>
                                         </div>
                                     </div>                               
                                 </a>
@@ -133,9 +133,9 @@
                                     <div class="hosting-thumbnail df fd-c">
                                         <img class="hosting-thumbnail-photo" src="./Ressources/hebergements/panier.jpg" alt="photo de la chambre 5" title="Cliquez pour agrandir l'image" />
                                         <div class="hosting-thumbnail-text">
-                                            <span class="bold">Auberge Le Panier</span>
-                                            <div class="thin"> Nuit à partir de 23€</div>
-                                            <span style="color: #0065FC;"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i></span>
+                                            <div class="hosting-thumbnail-details bold">Auberge Le Panier</div>
+                                            <div class="hosting-thumbnail-details thin fs-small"> Nuit à partir de 23€</div>
+                                            <div class="hosting-thumbnail-details" style="color: #0065FC;"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i></div>
                                         </div>
                                     </div>
                                 </a>
@@ -145,9 +145,9 @@
                                     <div class="hosting-thumbnail df fd-c">
                                         <img class="hosting-thumbnail-photo" src="./Ressources/hebergements/amina.jpg" alt="photo de la chambre 6" title="Cliquez pour agrandir l'image" />          
                                         <div class="hosting-thumbnail-text">
-                                            <span class="bold">Hôtel chez Amina</span>
-                                            <div class="thin">Nuit à partir de 96€</div>
-                                            <span style="color: #0065FC;"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></span>
+                                            <div class="hosting-thumbnail-details bold">Hôtel chez Amina</div>
+                                            <div class="hosting-thumbnail-details thin fs-small"> Nuit à partir de 96€</div>
+                                            <div class="hosting-thumbnail-details" style="color: #0065FC;"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></div>
                                         </div>                                       
                                     </div>                                             
                                 </a>
@@ -169,9 +169,9 @@
                                 <div class="popular-thumbnail df">
                                     <div><img class="popular-thumbnail-photo" src="./Ressources/hebergements/soleil-matin.jpg" alt="photo de la chambre 1" title="Cliquez pour agrandir l'image" /></div>
                                     <div class="popular-thumbnail-text">
-                                        <span class="bold">Hôtel Le soleil du<br/> matin</span>
-                                        <div class="thin">Nuit à partir de 128€</div>
-                                        <span style="color: #0065FC;"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></span>
+                                        <div class="hosting-thumbnail-details bold">Hôtel Le soleil du<br/> matin</div>
+                                        <div class="hosting-thumbnail-details thin fs-small">Nuit à partir de 128€</div>
+                                        <div class="hosting-thumbnail-details" style="color: #0065FC;"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></div>
                                     </div>
                                 </div>
                             </a>
@@ -181,9 +181,9 @@
                                 <div class="popular-thumbnail df">
                                     <div><img class="popular-thumbnail-photo" src="./Ressources/hebergements/coeur-eau.jpg" alt="photo de la chambre 2" title="Cliquez pour agrandir l'image" /></div>     
                                     <div class="popular-thumbnail-text">
-                                        <span class="bold">Au coeur de l'eau Chambres d'hôtes</span>
-                                        <div class="thin">Nuit à partir de 71€</div>
-                                        <span style="color: #0065FC;"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i></span>
+                                        <div class="hosting-thumbnail-details bold">Au coeur de l'eau Chambres d'hôtes</div>
+                                        <div class="hosting-thumbnail-details thin fs-small">Nuit à partir de 71€</div>
+                                        <div class="hosting-thumbnail-details" style="color: #0065FC;"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i></div>
                                     </div>
                                 </div>
                             </a>
@@ -193,9 +193,9 @@
                                 <div class="popular-thumbnail df">
                                     <div><img class="popular-thumbnail-photo" src="./Ressources/hebergements/bleu-blanc.jpg" alt="photo de la chambre 3" title="Cliquez pour agrandir l'image" /></div>         
                                     <div class="popular-thumbnail-text">
-                                        <span class="bold">Hôtel Tout bleu et<br/> Blanc</span>
-                                        <div class="thin">Nuit à partir de 68€</div>
-                                        <span style="color: #0065FC;"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i></span>
+                                        <div class="hosting-thumbnail-details bold">Hôtel Tout bleu et<br/> Blanc</div>
+                                        <div class="hosting-thumbnail-details thin fs-small">Nuit à partir de 68€</div>
+                                        <div class="hosting-thumbnail-details" style="color: #0065FC;"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i></div>
                                     </div>
                                 </div>
                             </a> 
@@ -279,7 +279,7 @@
         </div>
         <div id="footer" class="bloc">
             <div>
-                <span class="bold">A propos</span>
+                <span class="bold footer-title">A propos</span>
                 <ul>
                     <li><a>Fonctionnement du site</a></li>
                     <li><a>Conditions générales de vente</a></li>
@@ -287,14 +287,14 @@
                 </ul>
             </div>
             <div>
-                <span class="bold">Nos hébergements</span>
+                <span class="bold footer-title">Nos hébergements</span>
                 <ul>
                     <li><a>Charte qualité</a></li>
                     <li><a>Soumettre votre hôtel</a></li>
                 </ul>
             </div>
             <div>
-                <span class="bold">Assistance</span>  
+                <span class="bold footer-title">Assistance</span>  
                 <ul>
                     <li><a>Centre d'aide</a></li>
                     <li><a>Nous contacter</a></li>
