working on mobile bloc 1

--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
 
 
             <div id="first-bloc">
-                    <p>
+                    <p id="first-bloc-text">
                         <span class="bold">Trouver votre hébergement pour des vacances de rêve</span>
                         <br/>
                         <span class="classic">En plein centre ville ou en pleine nature</span>  
                     </p>        
-                <div class="df">
+                <div id="searcher" class="df">
                     <div class="df"><div id="logo-gps"><span><i id="logo-gps-pos" class="fas fa-map-marker-alt"></i></span></div></div>
                     <input type="search" name="search" id="search" value="Marseille, France" />
                     <div id="body-search-btn-mobile">
@@ -73,13 +73,13 @@
                             <span class="filter-text">Familial</span>
                         </div> 
                     </div>
-                    <div class="filter df ai-c" >
+                    <div id="filter-solo-one" class="filter df ai-c" >
                         <div class="filter-logo-circle">
                             <span style="color: #0065FC;"><i class="fas fa-heart"></i></span>
                         </div>
                         <span class="filter-text">Romantique</span>
                     </div>
-                    <div class="filter df ai-c" >
+                    <div id="filter-solo-two" class="filter df ai-c" >
                             <span class="filter-logo-circle" style="color: #0065FC;"><i class="fas fa-dog"></i></span>
                         <span class="filter-text">Animaux autorisés</span>
                         </div> 
