mobil popular done

--- a/index.html
+++ b/index.html
@@ -82,23 +82,20 @@
                     <div id="filter-solo-two" class="filter df ai-c" >
                             <span class="filter-logo-circle" style="color: #0065FC;"><i class="fas fa-dog"></i></span>
                         <span class="filter-text">Animaux autorisés</span>
-                        </div> 
                     </div> 
-                <p>
-                    <span style="color: #0065FC; margin-right: 1em;"><i class="fas fa-info-circle"></i></span>Plus de 500 logements sont disponbiles dans cette ville
-                </p>
+                </div> 
+                <div id="first-bloc-last-part" class="df fd-r">
+                    <div>
+                        <span style="color: #0065FC; margin-right: 1em;"><i class="fas fa-info-circle"></i></span>
+                    </div>
+                    <div>
+                        Plus de 500 logements sont disponbiles dans cette ville
+                    </div>
+                </div>
+
             </div>
-
-
-
-
-
-
             <div id="body-hosting" class="df">
-
-
                 <section id="body-hosting-marseille" class="bloc">
-                    
                     <h2>Hébergements à Marseille</h2>
                     <div id="body-hosting-marseille-one-and-two">
                         <div id="body-hosting-marseille-one" class="df">
@@ -182,8 +179,8 @@
                         </p>
                     </div>    
                 </section>
-                <section id="body-hosting-popular" class="bloc df body-hosting">
-                    <div class="df jc-se">
+                <section id="body-hosting-popular" class="bloc-marseille df body-hosting">
+                    <div id="body-hosting-popular-title" class="df">
                         <h2>Les plus populaires</h2>
                         <div id="body-hosting-popular-logo"><i class="fas fa-chart-line"></i></div>
                     </div>
