--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
             </div>
             <div id="body-hosting" class="df">
-                <section id="body-hosting-marseille" class="bloc">
+                <section id="body-hosting-marseille" class="bloc-marseille">
                     <h2>Hébergements à Marseille</h2>
                     <div id="body-hosting-marseille-one-and-two">
                         <div id="body-hosting-marseille-one" class="df">
