mobil working on footer now

--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
                     </div>
                 </section>
             </div>
-            <div id="body-activity" class="df fd-c">
+            <div id="body-activity">
                 <h1 id="activities-title">Activités à Marseille</h1>
                 <div id="activity-activities" class="df">
 
