--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div id="header-mobile" class="df">
             <div class="df jc-sa ai-c">
                 <img src="Ressources/logo/Reservia.svg" alt="logo reservia" />
-                <div id="register-parent"><a href="#"><span id="register">S'inscrire</span></a></div>
+                <div id="register-parent"><a href="#"><span id="register-mobile">S'inscrire</span></a></div>
             </div>
             <nav id="menu-mobile" class="df jc-se">
                 <div class="menu-mobile-items">
@@ -42,11 +42,11 @@
 
 
             <div id="first-bloc">
-                    <p id="first-bloc-text">
-                        <span class="bold">Trouver votre hébergement pour des vacances de rêve</span>
+                    <div id="first-bloc-text">
+                        <div class="bold">Trouver votre hébergement pour des vacances de rêve</div>
                         <br/>
-                        <span class="classic">En plein centre ville ou en pleine nature</span>  
-                    </p>        
+                        <div class="classic">En plein centre ville ou en pleine nature</div>  
+                    </div>        
                 <div id="searcher" class="df">
                     <div class="df"><div id="logo-gps"><span><i id="logo-gps-pos" class="fas fa-map-marker-alt"></i></span></div></div>
                     <input type="search" name="search" id="search" value="Marseille, France" />
@@ -58,7 +58,7 @@
                     <div id="body-search-btn">Rechercher</div>
                 </div> 
                 <div id="filtres" class="df">
-                    <span id="filtres-title" class="bold">Filtres</span>
+                    <div id="filtres-title" class="bold">Filtres</div>
                     <div class="df">
                         <div class="filter df ai-c" >
                             <div class="filter-logo-circle">
