--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
                 <a href="#"><span id="register">S'inscrire</span></a>
             </nav>
         </div>
-
         <div id="header-mobile" class="df">
             <div class="df jc-sa ai-c">
                 <img src="Ressources/logo/Reservia.svg" alt="logo reservia" />
@@ -82,7 +81,7 @@
                 </div> 
                 <div id="first-bloc-last-part" class="df fd-r">
                     <div>
-                        <span style="color: #0065FC; margin-right: 1em;"><i class="fas fa-info-circle"></i></span>
+                        <div id="infos" style="color: #0065FC; margin-right: 1em;"><i class="fas fa-info"></i></div>
                     </div>
                     <div>
                         Plus de 500 logements sont disponbiles dans cette ville
@@ -102,7 +101,7 @@
                                         <div class="hosting-thumbnail-text df fd-c jc-sb">
                                             <div class="hosting-thumbnail-details bold">Auberge de la Cannebière</div>
                                             <div class="hosting-thumbnail-details thin fs-small">Nuit à partir de 25€</div>
-                                            <div class="hosting-thumbnail-details" style="color: #0065FC;"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fa fa-star"></i><i class="far fa-star"></i></div>
+                                            <div class="hosting-thumbnail-details" style="color: #0065FC;"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fa fa-star"></i><span style="color: #afb8c7;"><i class="fas fa-star"></i></span></div>
                                         </div>
                                     </div>
                                 </a>
@@ -126,7 +125,7 @@
                                         <div class="hosting-thumbnail-text">
                                             <div class="hosting-thumbnail-details bold">Hôtel Les mouettes</div>
                                             <div class="hosting-thumbnail-details thin fs-small">Nuit à partir de 76€</div>
-                                            <div class="hosting-thumbnail-details" style="color: #0065FC;"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i></div>
+                                            <div class="hosting-thumbnail-details" style="color: #0065FC;"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><span style="color: #afb8c7;"><i class="fas fa-star"></i></span></div>
                                         </div>
                                     </div>
                                 </a>
@@ -140,7 +139,7 @@
                                         <div class="hosting-thumbnail-text">
                                             <div class="hosting-thumbnail-details bold">Hôtel de la mer</div>
                                             <div class="hosting-thumbnail-details thin fs-small"> Nuit à partir de 46€</div>
-                                            <div class="hosting-thumbnail-details" style="color: #0065FC;"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i><i class="far fa-star"></i></div>
+                                            <div class="hosting-thumbnail-details" style="color: #0065FC;"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><span style="color: #afb8c7;"><i class="fas fa-star"></i><i class="fas fa-star"></i></span></div>
                                         </div>
                                     </div>                               
                                 </a>
@@ -152,7 +151,7 @@
                                         <div class="hosting-thumbnail-text">
                                             <div class="hosting-thumbnail-details bold">Auberge Le Panier</div>
                                             <div class="hosting-thumbnail-details thin fs-small"> Nuit à partir de 23€</div>
-                                            <div class="hosting-thumbnail-details" style="color: #0065FC;"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i></div>
+                                            <div class="hosting-thumbnail-details" style="color: #0065FC;"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><span style="color: #afb8c7;"><i class="fas fa-star"></i></span></div>
                                         </div>
                                     </div>
                                 </a>
@@ -200,7 +199,7 @@
                                     <div class="popular-thumbnail-text">
                                         <div class="hosting-thumbnail-details bold">Au coeur de l'eau Chambres d'hôtes</div>
                                         <div class="hosting-thumbnail-details thin fs-small">Nuit à partir de 71€</div>
-                                        <div class="hosting-thumbnail-details" style="color: #0065FC;"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i></div>
+                                        <div class="hosting-thumbnail-details" style="color: #0065FC;"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><span style="color: #afb8c7;"><i class="fas fa-star"></i></span></div>
                                     </div>
                                 </div>
                             </a>
@@ -212,7 +211,7 @@
                                     <div class="popular-thumbnail-text">
                                         <div class="hosting-thumbnail-details bold">Hôtel Tout bleu et<br/> Blanc</div>
                                         <div class="hosting-thumbnail-details thin fs-small">Nuit à partir de 68€</div>
-                                        <div class="hosting-thumbnail-details" style="color: #0065FC;"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i></div>
+                                        <div class="hosting-thumbnail-details" style="color: #0065FC;"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><span style="color: #afb8c7;"><i class="fas fa-star"></i></span></div>
                                     </div>
                                 </div>
                             </a> 
